--- a/scss/style.scss
+++ b/scss/style.scss
@@ -248,6 +248,10 @@
         &.active-effect-sheet {
           @import './sheets/active-effect-config'
         }
+
+        &.roll-collab {
+          @import './sheets/roll-collab-sheet'
+        }
       }
     }
   }
