--- a/scss/components/_cohort-block.scss
+++ b/scss/components/_cohort-block.scss
@@ -6,9 +6,10 @@
     align-items: stretch;
     border-radius: 10px;
     border: 2px outset var(--blades-white);
-    margin: 5px;
+    margin: 5px 5px 10px 5px;
     background: linear-gradient(45deg, var(--blades-black-dark), var(--blades-grey));
     box-shadow: 3px 3px 5px var(--blades-black-dark);
+    max-width: var(--max-cohort-block-width, 100%);
 
     .cohort-top {
       display: grid;
@@ -38,6 +39,7 @@
 
           img {
             max-width: 60px;
+            min-width: 60px;
             position: absolute;
           }
 
@@ -78,6 +80,7 @@
         transition: 0.25s;
         transform-origin: 0% 50%;
         display: inline-block;
+        white-space: nowrap;
 
         &:hover {
           color: var(--blades-gold);
@@ -92,6 +95,7 @@
         position: relative;
         top: -3px;
         font-weight: bold;
+        white-space: nowrap;
       }
 
       .cohort-quality-container {
@@ -237,7 +241,67 @@
           }
         }
       }
+    }
 
+    .cohort-description {
+      margin-bottom: 5px;
+    }
+
+    .cohort-flaws-edges {
+      justify-content: flex-end;
+      padding: 0 0 5px 0;
+
+      .tooltip-trigger {
+        // z-index: 5 !important;
+        margin: -7px 3px -20px 0;
+
+        .tooltip-scaling-elem {
+          margin: 0 2px;
+          padding: 0 8px;
+          border-radius: 5px;
+          font-family: var(--font-emphasis);
+          color: var(--blades-white);
+          background: var(--blades-black-dark);
+          font-size: 10px;
+          text-transform: uppercase;
+          line-height: 12px;
+          // box-shadow: 3px 3px 5px var(--blades-black);
+
+          &.edge-name {
+            // background: var(--blades-green-dark);
+            outline: 1px inset #00FF00;
+          }
+          &.flaw-name {
+            // background: var(--blades-red-dark);
+            outline: 1px inset #FF0000;
+          }
+        }
+      }
+      .tooltip {
+        left: unset;
+        right: 200px;
+        bottom: 10px;
+
+        &.tooltip-edge {
+          // background: var(--blades-green-dark-fade);
+          border-color: var(--blades-green-bright);
+          box-shadow:
+          inset 0 0 3px var(--blades-green-dark),
+          inset 0 0 5px var(--blades-green-dark),
+          inset 0 0 15px var(--blades-green-dark),
+          inset 0 0 15px var(--blades-green-dark);
+        }
+
+        &.tooltip-flaw {
+          // background: var(--blades-red-dark-fade);
+          border-color: var(--blades-red-bright);
+          box-shadow:
+            inset 0 0 3px var(--blades-red-dark),
+            inset 0 0 5px var(--blades-red-dark),
+            inset 0 0 15px var(--blades-red-dark),
+            inset 0 0 15px var(--blades-red-dark);
+        }
+      }
     }
 
     .filled-label {
